# Coriolanus

./: .gitignore  README.md  pyproject.toml
src/coriolanus/: __init__.py  shakespeare_repl.py
src/coriolanus/data/: folger_mod_script.py
src/coriolanus/data/folger-txt-mod/: alls-well-that-ends-well_folger_mod.txt  antony-and-cleopatra_folger_mod.txt  as-you-like-it_folger_mod.txt  coriolanus_folger_mod.txt  cymbeline_folger_mod.txt  hamlet_folger_mod.txt  henry-iv-part-1_folger_mod.txt  henry-vi-part-1_folger_mod.txt  henry-vi-part-2_folger_mod.txt  henry-vi-part-3_folger_mod.txt  henry-viii_folger_mod.txt  king-lear_folger_mod.txt  loves-labors-lost_folger_mod.txt  lucrece_folger_mod.txt  measure-for-measure_folger_mod.txt  much-ado-about-nothing_folger_mod.txt  othello_folger_mod.txt  pericles_folger_mod.txt  romeo-and-juliet_folger_mod.txt  shakespeares-sonnets_folger_mod.txt  the-comedy-of-errors_folger_mod.txt  the-merry-wives-of-windsor_folger_mod.txt  the-taming-of-the-shrew_folger_mod.txt  the-tempest_folger_mod.txt  the-two-noble-kinsmen_folger_mod.txt  timon-of-athens_folger_mod.txt  titus-andronicus_folger_mod.txt  troilus-and-cressida_folger_mod.txt  venus-and-adonis_folger_mod.txt
src/coriolanus/data/plays/: a-midsummer-nights-dream_folger_mod.txt  coriolanus_folger_mod.txt  henry-iv-part-2_folger_mod.txt  henry-v_folger_mod.txt  julius-caesar_folger_mod.txt  king-john_folger_mod.txt  macbeth_folger_mod.txt  richard-ii_folger_mod.txt  richard-iii_folger_mod.txt  the-merchant-of-venice_folger_mod.txt  the-two-gentlemen-of-verona_folger_mod.txt  (+2 more)
(+3 files in other folders)
