[project]
name = "coriolanus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxwell Zhou", email = "maxwell.zhou.zc@foxmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.2.0",
]

[project.scripts]
coriolanus = "coriolanus:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
