[project]
name = "coriolanus"
version = "0.1.0"
description = "Shakespeare in the Terminal"
readme = "README.md"
authors = [
    { name = "alcarinquez", email = "maxwell.zhou.zichen@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]

[project.scripts]
coriolanus = "coriolanus:main"
corio = "coriolanus:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
